15-network-policy/01-ns-pods-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: test-ns
  labels:
    app: pod-a
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-a-svc
  namespace: test-ns
spec:
  selector:
    app: pod-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: test-ns
  labels:
    app: pod-b
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-b-svc
  namespace: test-ns
spec:
  selector:
    app: pod-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: dev-ns
  labels:
    app: pod-c
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-c-svc
  namespace: dev-ns
spec:
  selector:
    app: pod-c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
